# houjie

./: .gitignore  README.md  REQUIREMENTS.md  report.py  requirements.md  requirements.txt
backend/: .env  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  start.sh
backend/app/: auth.py  database.py  main.py  models.py  router.js  schemas.py
backend/app/controller/: auth.js  dashboard.js
backend/app/middleware/: error_handler.js
backend/app/model/: customer.js  user.js  workOrder.js
backend/app/service/: auth.js  dashboard.js
backend/config/: config.default.js  config.json  config.prod.js  plugin.js
backend/database/migrations/: 20250107000001-create-users-table.js
backend/migrations/: 20250107093644-create-customers.js  20250107093644-create-work-orders.js  20250107115616-create-users-table.js
backend/run/: agent_config.json  agent_config_meta.json  agent_timing_170356.json  application_config.json  application_timing_170407.json  router.json
backend/seeders/: 20250107095243-demo-customers-and-orders.js
backend/typings/app/controller/: index.d.ts
backend/typings/app/middleware/: index.d.ts
backend/typings/app/model/: index.d.ts
backend/typings/app/service/: index.d.ts
backend/typings/config/: plugin.d.ts
categories/: base.py
config/: report_templates.yaml
design/: ui_design.md  wireframes.txt
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
im-chat-backend/: pyproject.toml
im-chat-backend/app/: auth.py  chat.py  main.py  models.py
src/: main.py
(+55 files in other folders)
